--- a/apidoc/pom.xml
+++ b/apidoc/pom.xml
@@ -33,21 +33,12 @@
             <artifactId>fastjson</artifactId>
             <version>1.2.47</version>
         </dependency>
+        <dependency>
+            <groupId>io.swagger.core.v3</groupId>
+            <artifactId>swagger-core</artifactId>
+            <version>2.0.9</version>
+        </dependency>
     </dependencies>
-    <distributionManagement>
-        <snapshotRepository>
-            <id>snapshots</id>
-            <name>User Porject Snapshot</name>
-            <url>http://192.168.5.252:8081/nexus/content/repositories/snapshots/</url>
-            <!-- <uniqueVersion>true</uniqueVersion> -->
-        </snapshotRepository>
-        <repository>
-            <id>releases</id>
-            <name>User Porject Release</name>
-            <url>http://192.168.5.252:8081/nexus/content/repositories/releases/</url>
-            <uniqueVersion>true</uniqueVersion>
-        </repository>
-    </distributionManagement>
     <build>
         <plugins>
             <plugin>
